[package]
name = "redstone-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[dependencies]
bevy = {version = "0.12.1", features=["dynamic_linking"]}
bevy_asset_loader = {version = "0.19.1", features=["2d"]}