[package]
name = "redstone-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1"}
bevy-persistent = { version = "0.4.3", features = ["json"] }
bevy_asset_loader = {version = "0.19.1", features=["2d"]}
dirs = "5.0.1"
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
